services/cloud-proxy/templates/external-forward-endpointslice.yaml
#apiVersion: v1
#kind: Service
#metadata:
#  name: jellyfin-service
#  namespace: default
#spec:
#  ports:
#    - name: jellyfin-service
#      port: 8096 
#      protocol: TCP
#      targetPort: 8096 
#  #clusterIP: None
#  #type: ClusterIP
#---
#apiVersion: discovery.k8s.io/v1
#kind: EndpointSlice
#metadata:
#  name: jellyfin-service-1
#  namespace: default
#  labels:
#    kubernetes.io/service-name: jellyfin-service
#addressType: IPv4
#ports:
#  - name: ''
#    appProtocol: http
#    protocol: TCP
#    port: 8096
#endpoints:
#  - addresses:
#      - "10.0.77.2"
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
spec:
  type: ExternalName
  externalName: watch.spencerslab.com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    #traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: jelly.spencerslab.com
    http:
      paths:
      - backend:
          service:
            name: jellyfin-service
            port:
              number: 8096
        pathType: Prefix
        path: /
