services/cloud-proxy/templates/external-forward-external-name.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
spec:
  type: ExternalName
  externalName: watch.spencerslab.com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: jelly.spencerslab.com
      http:
        paths:
          - backend:
              service:
                name: jellyfin-service
                port:
                  number: 8096
            pathType: Prefix
            path: /
