services/cloud-proxy/templates/external-forward-ingress.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: jellyfin-service
  namespace: default
subsets:
  - addresses:
      - ip: 10.0.77.2
    ports:
      - port: 8096
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 8096
      targetPort: 8096
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClass: "traefik"
  rules:
    - host: jelly.spencerslab.com
      http:
        paths:
          - backend:
              service:
                name: jellyfin-service
                port:
                  number: 8096
            pathType: Prefix
            path: /
